# my-manimations

./: .gitattributes  README.md  colorsample.py  donuts.py  drawingshapes.py  example.py  pyproject.toml  requirements.txt  setsandrelations.py
media/Tex/: c98bccb2ad977508.dvi  c98bccb2ad977508.tex
media/videos/colorsample/480p15/partial_movie_files/ColorSample/: partial_movie_file_list.txt
media/videos/drawingshapes/480p15/partial_movie_files/DrawingShapes/: partial_movie_file_list.txt
media/videos/setsandrelations/480p15/partial_movie_files/Bijection/: partial_movie_file_list.txt
media/videos/setsandrelations/480p15/partial_movie_files/SetsAndRelations/: partial_movie_file_list.txt
my-manimations/: pyproject.toml
my-manimations/tests/: test_my_manimations.py
tests/: test_manimations.py
