[tool.poetry]
name = "manimations"
version = "0.1.0"
description = ""
authors = ["beautidata <beautifuldatadev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
manim = "^0.5.0"
colorutils = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
